tests/rosetta/transpiler/CPP/date-manipulation.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:31:181: warning: multi-character character constant [-Wmultichar]
   31 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:32:209: warning: multi-character character constant [-Wmultichar]
   32 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:32:295: warning: multi-character character constant [-Wmultichar]
   32 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:33:189: warning: multi-character character constant [-Wmultichar]
   33 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:34:183: warning: multi-character character constant [-Wmultichar]
   34 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:35:215: warning: multi-character character constant [-Wmultichar]
   35 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:35:251: warning: multi-character character constant [-Wmultichar]
   35 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:233:67: error: invalid cast from type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to type ‘int64_t’ {aka ‘long int’}
  233 |                 parts = ([&]{ auto __tmp = parts; __tmp.push_back((int64_t)cur); return __tmp; }());
      |                                                                   ^~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:242:59: error: invalid cast from type ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to type ‘int64_t’ {aka ‘long int’}
  242 |         parts = ([&]{ auto __tmp = parts; __tmp.push_back((int64_t)cur); return __tmp; }());
      |                                                           ^~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:244:30: error: no matching function for call to ‘std::map<std::__cxx11::basic_string<char>, long int>::at(__gnu_cxx::__alloc_traits<std::allocator<long int>, long int>::value_type&)’
  244 |     int64_t month = months.at(parts[int64_t(0)]);
      |                     ~~~~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:4:
/usr/include/c++/13/bits/stl_map.h:549:7: note: candidate: ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::at(const key_type&) [with _Key = std::__cxx11::basic_string<char>; _Tp = long int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, long int> >; mapped_type = long int; key_type = std::__cxx11::basic_string<char>]’
  549 |       at(const key_type& __k)
      |       ^~
/usr/include/c++/13/bits/stl_map.h:549:26: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<long int>, long int>::value_type’ {aka ‘long int’} to ‘const std::map<std::__cxx11::basic_string<char>, long int>::key_type&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  549 |       at(const key_type& __k)
      |          ~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_map.h:558:7: note: candidate: ‘const std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::at(const key_type&) const [with _Key = std::__cxx11::basic_string<char>; _Tp = long int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, long int> >; mapped_type = long int; key_type = std::__cxx11::basic_string<char>]’
  558 |       at(const key_type& __k) const
      |       ^~
/usr/include/c++/13/bits/stl_map.h:558:26: note:   no known conversion for argument 1 from ‘__gnu_cxx::__alloc_traits<std::allocator<long int>, long int>::value_type’ {aka ‘long int’} to ‘const std::map<std::__cxx11::basic_string<char>, long int>::key_type&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  558 |       at(const key_type& __k) const
      |          ~~~~~~~~~~~~~~~~^~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:245:33: error: invalid initialization of reference of type ‘const std::string&’ {aka ‘const std::__cxx11::basic_string<char>&’} from expression of type ‘__gnu_cxx::__alloc_traits<std::allocator<long int>, long int>::value_type’ {aka ‘long int’}
  245 |     int64_t day = _parse_int_str(parts[int64_t(1)], int64_t(10));
      |                   ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:22:47: note: in passing argument 1 of ‘long int _parse_int_str(const std::string&, long int)’
   22 | static long _parse_int_str(const std::string& s, long base) {
      |                            ~~~~~~~~~~~~~~~~~~~^
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:246:34: error: invalid initialization of reference of type ‘const std::string&’ {aka ‘const std::__cxx11::basic_string<char>&’} from expression of type ‘__gnu_cxx::__alloc_traits<std::allocator<long int>, long int>::value_type’ {aka ‘long int’}
  246 |     int64_t year = _parse_int_str(parts[int64_t(2)], int64_t(10));
      |                    ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:22:47: note: in passing argument 1 of ‘long int _parse_int_str(const std::string&, long int)’
   22 | static long _parse_int_str(const std::string& s, long base) {
      |                            ~~~~~~~~~~~~~~~~~~~^
/workspace/mochi/tests/rosetta/transpiler/CPP/date-manipulation.cpp:253:42: error: no matching function for call to ‘std::map<std::__cxx11::basic_string<char>, long int>::at(int64_t&)’
  253 |     int64_t utc = (local - zoneOffsets.at(tz));
      |                            ~~~~~~~~~~~~~~^~~~
/usr/include/c++/13/bits/stl_map.h:549:7: note: candidate: ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::at(const key_type&) [with _Key = std::__cxx11::basic_string<char>; _Tp = long int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, long int> >; mapped_type = long int; key_type = std::__cxx11::basic_string<char>]’
  549 |       at(const key_type& __k)
      |       ^~
/usr/include/c++/13/bits/stl_map.h:549:26: note:   no known conversion for argument 1 from ‘int64_t’ {aka ‘long int’} to ‘const std::map<std::__cxx11::basic_string<char>, long int>::key_type&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  549 |       at(const key_type& __k)
      |          ~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_map.h:558:7: note: candidate: ‘const std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::at(const key_type&) const [with _Key = std::__cxx11::basic_string<char>; _Tp = long int; _Compare = std::less<std::__cxx11::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::__cxx11::basic_string<char>, long int> >; mapped_type = long int; key_type = std::__cxx11::basic_string<char>]’
  558 |       at(const key_type& __k) const
      |       ^~
/usr/include/c++/13/bits/stl_map.h:558:26: note:   no known conversion for argument 1 from ‘int64_t’ {aka ‘long int’} to ‘const std::map<std::__cxx11::basic_string<char>, long int>::key_type&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  558 |       at(const key_type& __k) const
      |          ~~~~~~~~~~~~~~~~^~~
